<resources>
    <string name="app_name">Homeless Lives Matter</string>
    <string name="tv_login">LOGIN</string>
    <string name="tv_register2">Registrarse</string>
    <string name="tv_nombre">Nombre</string>
    <string name="tv_apellido">Apellido</string>
    <string name="tv_email">E-Mail</string>
    <string name="tv_pass">Contraseña</string>
    <string name="tv_repetirpass">Repetir Contraseña</string>

    <string name="btn_ingresar">Ingresar</string>
    <string name="tv_notienescuenta">¿Aún no tienes cuenta?</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="tv_titulo">Modicar Contraseña</string>
    <string name="tv_contraActual">Contraseña Actual</string>
    <string name="tv_nuevaContra">Nueva Contraseña</string>
    <string name="tv_repetirContra">Repetir Contraseña</string>
    <string name="btn_Modificar">Modificar</string>
    <string name="tv_direccion">[Direccion]</string>
    <string name="btn_continuar">Continuar</string>

    //texts add_location
    <string name="tv_addloca_title">Completar datos de la ubicación</string>
    <string name="tv_addloca_cant">Cantinadad de personas: </string>
    <string name="sw_addloca_children">Niños: </string>
    <string name="sw_addloca_pets">Mascotas: </string>
    <string name="sw_addloca_handicapped">Discapacitados: </string>
    <string name="sw_addloca_grandparents">Ancianos: </string>
    <string name="tv_addloca_comments">Comentarios generales:</string>
    <string name="btn_addloca_add">Agregar</string>

    <string name="tv_infoMail">[Email]</string>
    <string name="tv_infoNombre">[Nombre]</string>
    <string name="tv_infoApellido">[Apellido]</string>
    <string name="tv_infoReportes">Reportes Realizados:</string>
    <string name="tv_cantidad">[Cantidad]</string>
    <string name="tv_infoUbicaciones">Ubicaciones Agregadas:</string>
    <string name="btn_modificarContra">Modificar contraseña</string>
    <string name="tv_logout">LogOut</string>

    <string name="tv_datosdeubicacion">Datos de ubicación</string>
    <string name="tv_cantidaddepersonas">Cantidad de personas: </string>

    <string name="tv_ubicacionSeleccionada">Ubicación Seleccionada</string>

    <string name="dialog_compartirUbicacion">Para poder utilizar nuestra aplicación, es necesario que comparta la ubicación de su dispositivo. De lo contrario no podrá acceder a su cuenta.</string>
</resources>