<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_infoMail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/tv_infoMail"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_infoNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:gravity="end"
                android:text="@string/tv_infoNombre"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_infoApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:gravity="start"
                android:text="@string/tv_infoApellido"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_infoReportes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:gravity="end"
                android:text="@string/tv_infoReportes"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_reportes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/tv_cantidad"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_infoUbicaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:gravity="end"
                android:text="@string/tv_infoUbicaciones"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_ubicacionesAgregadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/tv_cantidad"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_modificarContra"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_shape"
            android:onClick="redirec_modificarPass"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/btn_modificarContra"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@color/purple_500"
            android:gravity="center_vertical|end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:onClick="logout"
                android:paddingRight="20dp"
                android:text="@string/tv_logout"
                android:textColor="#C10000"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>