<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368">

        <TextView
            android:id="@+id/tv_register2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_register2"
            android:textColor="@color/purple_500"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_nombre"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_apellido"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_email"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_pass"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_repetirpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_repetirpass"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_repetirpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/tv_register2"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>