<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_infoMail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="51dp"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/tv_infoMail"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_direccion"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btn_continuar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_shape"
            android:onClick="redirec_datosUbicacion"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/btn_continuar"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginTop="70dp"
            android:background="@color/purple_500"
            android:orientation="vertical" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>