<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CambiarContraseniaActivity">

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_showPass_modNueva"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34">

        <TextView
            android:id="@+id/tv_Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_titulo"
            android:textColor="@color/purple_500"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_contraActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tv_contraActual"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_contraActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/tv_nuevaContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_nuevaContra"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nuevaContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_repetirContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_repetirContra"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_repetirContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_modificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
            android:onClick="onClickCambiarPass"
            android:text="@string/btn_Modificar"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_showPass_modActual"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showPassModActual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/view" />

    <ImageButton
        android:id="@+id/btn_showPass_modNueva"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showPassModNueva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_showPass_modActual"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/view" />
</androidx.constraintlayout.widget.ConstraintLayout>