<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_datosUbicacion"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="20dp"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/tv_datosdeubicacion"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_ninos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_ninos" />

            <ImageView
                android:id="@+id/ic_discapacitados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_discapacitados" />

            <ImageView
                android:id="@+id/ic_mascotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_mascotas" />

            <ImageView
                android:id="@+id/ic_ancianos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_ancianos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cantidadPeronas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/tv_cantidaddepersonas"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_variableCantPersonas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_cantidad"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_comentariosGenerales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/tv_addloca_comments"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_comentariosGenerales"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:clickable="false"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@color/purple_500"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:clickable="true"
                app:srcCompat="@drawable/ic_share"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/btn_maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:layout_marginEnd="75dp"
                android:layout_marginRight="75dp"
                android:background="#00FFFFFF"
                android:clickable="true"
                app:srcCompat="@drawable/ic_maps"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/btn_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_report"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>